# Numerical-Recipes-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/Fredholm/: CMakeLists.txt  fred2.hpp  main.cpp
src/LU_Decomposition/: CMakeLists.txt  ludcmp.hpp  main.cpp
